WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173300
[Cocoa] The system Japanese font cannot be italicized
https://bugs.webkit.org/show_bug.cgi?id=173300
Summary
[Cocoa] The system Japanese font cannot be italicized
Myles C. Maxfield
Reported
2017-06-12 21:58:43 PDT
[Cocoa] The system Japanese font cannot be italicized
Attachments
Patch
(6.12 KB, patch)
2017-06-12 22:05 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
WIP
(6.11 KB, patch)
2017-06-12 23:02 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.14 KB, patch)
2017-06-13 00:02 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(9.47 KB, patch)
2017-06-13 13:53 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(1.91 KB, patch)
2017-06-13 17:40 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.50 KB, patch)
2017-06-15 18:23 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-elcapitan
(1.80 MB, application/zip)
2017-06-15 19:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-elcapitan
(2.29 MB, application/zip)
2017-06-15 19:37 PDT
,
Build Bot
no flags
Details
Patch
(6.37 KB, patch)
2017-06-16 16:40 PDT
,
Myles C. Maxfield
rniwa
: review+
Details
Formatted Diff
Diff
Patch for committing
(6.45 KB, patch)
2017-06-16 17:03 PDT
,
Myles C. Maxfield
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(1.71 MB, application/zip)
2017-06-16 18:24 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-elcapitan
(2.20 MB, application/zip)
2017-06-16 18:35 PDT
,
Build Bot
no flags
Details
Patch for committing
(7.27 KB, patch)
2017-06-19 17:34 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(11)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-06-12 22:05:44 PDT
Created
attachment 312749
[details]
Patch
Myles C. Maxfield
Comment 2
2017-06-12 22:06:10 PDT
<
rdar://problem/31805407
>
Myles C. Maxfield
Comment 3
2017-06-12 23:02:56 PDT
Created
attachment 312752
[details]
WIP
Myles C. Maxfield
Comment 4
2017-06-13 00:02:20 PDT
Created
attachment 312755
[details]
Patch
Myles C. Maxfield
Comment 5
2017-06-13 13:53:43 PDT
Created
attachment 312804
[details]
Patch
Myles C. Maxfield
Comment 6
2017-06-13 17:40:56 PDT
Created
attachment 312838
[details]
Patch
Myles C. Maxfield
Comment 7
2017-06-15 18:20:11 PDT
***
Bug 173328
has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 8
2017-06-15 18:23:26 PDT
Created
attachment 313040
[details]
Patch
Build Bot
Comment 9
2017-06-15 19:26:04 PDT
Comment on
attachment 313040
[details]
Patch
Attachment 313040
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3938886
New failing tests: imported/w3c/web-platform-tests/html/dom/reflection-grouping.html js/intl-datetimeformat.html js/kde/parse.html imported/w3c/web-platform-tests/html/dom/reflection-obsolete.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/srcset/parse-a-srcset-attribute.html imported/w3c/web-platform-tests/html/dom/reflection-tabular.html fast/url/idna2003.html imported/w3c/web-platform-tests/html/dom/reflection-embedded.html editing/text-iterator/rtl-first-letter-text-iterator-crash.html fast/text/crash-obscure-text.html imported/w3c/web-platform-tests/html/dom/reflection-forms.html
Build Bot
Comment 10
2017-06-15 19:26:05 PDT
Created
attachment 313047
[details]
Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 11
2017-06-15 19:37:18 PDT
Comment on
attachment 313040
[details]
Patch
Attachment 313040
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3938892
New failing tests: js/intl-datetimeformat.html js/kde/parse.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/srcset/parse-a-srcset-attribute.html fast/url/idna2003.html editing/text-iterator/rtl-first-letter-text-iterator-crash.html fast/text/crash-obscure-text.html
Build Bot
Comment 12
2017-06-15 19:37:19 PDT
Created
attachment 313049
[details]
Archive of layout-test-results from ews117 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 13
2017-06-16 16:40:18 PDT
Created
attachment 313156
[details]
Patch
Ryosuke Niwa
Comment 14
2017-06-16 16:42:55 PDT
Comment on
attachment 313156
[details]
Patch r=me assuming it passes tests.
Myles C. Maxfield
Comment 15
2017-06-16 17:03:05 PDT
Created
attachment 313160
[details]
Patch for committing
Build Bot
Comment 16
2017-06-16 18:24:50 PDT
Comment on
attachment 313160
[details]
Patch for committing
Attachment 313160
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3945012
New failing tests: imported/w3c/web-platform-tests/html/dom/reflection-grouping.html js/intl-datetimeformat.html js/kde/parse.html imported/w3c/web-platform-tests/html/dom/reflection-obsolete.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/srcset/parse-a-srcset-attribute.html imported/w3c/web-platform-tests/html/dom/reflection-tabular.html fast/url/idna2003.html imported/w3c/web-platform-tests/html/dom/reflection-embedded.html editing/text-iterator/rtl-first-letter-text-iterator-crash.html fast/text/crash-obscure-text.html imported/w3c/web-platform-tests/html/dom/reflection-forms.html
Build Bot
Comment 17
2017-06-16 18:24:51 PDT
Created
attachment 313172
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 18
2017-06-16 18:35:37 PDT
Comment on
attachment 313160
[details]
Patch for committing
Attachment 313160
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3945009
New failing tests: js/intl-datetimeformat.html js/kde/parse.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/srcset/parse-a-srcset-attribute.html fast/url/idna2003.html editing/text-iterator/rtl-first-letter-text-iterator-crash.html fast/text/crash-obscure-text.html
Build Bot
Comment 19
2017-06-16 18:35:39 PDT
Created
attachment 313174
[details]
Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 20
2017-06-19 17:25:36 PDT
It looks like there is no way to work around this crash in El Capitan. I'll add a platform guard.
Myles C. Maxfield
Comment 21
2017-06-19 17:34:13 PDT
Created
attachment 313346
[details]
Patch for committing
WebKit Commit Bot
Comment 22
2017-06-19 19:28:21 PDT
Comment on
attachment 313346
[details]
Patch for committing Clearing flags on attachment: 313346 Committed
r218524
: <
http://trac.webkit.org/changeset/218524
>
Ryan Haddad
Comment 23
2017-06-20 16:22:22 PDT
Reverted
r218524
for reason: This change broke internal builds. Committed
r218614
: <
http://trac.webkit.org/changeset/218614
>
Myles C. Maxfield
Comment 24
2017-06-20 16:52:30 PDT
Committed
r218616
: <
http://trac.webkit.org/changeset/218616
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug